@@ -1,7 +1,7 @@
 
  Documentation                                                   COPYRIGHT.txt
 
- Copyright 2013 - 2020 "kento" (Karim Rahimpur) www.itthinx.com
+ Copyright 2013 - 2021 "kento" (Karim Rahimpur) www.itthinx.com
 
  The files COPYRIGHT.txt and LICENSE.txt as well as ALL NOTICES IN THE
  HEADERS OF ALL FILES MUST BE KEPT INTACT.
