@@ -1,6 +1,6 @@
  Documentation                                                     LICENSE.txt
 
- Copyright 2013 - 2020 "kento" (Karim Rahimpur) www.itthinx.com
+ Copyright 2013 - 2021 "kento" (Karim Rahimpur) www.itthinx.com
 
   The code and all files of "Documentation" are released under the
   GNU General Public License, Version 3. The following additional terms
