@@ -114,7 +114,7 @@ class Documentation_Admin_Notice {
 		$output .= '<p>';
 		$output .= sprintf(
 			'<a class="button button-primary" href="%s" target="_blank">%s</a>',
-			esc_url( 'http://wordpress.org/support/view/plugin-reviews/documentation?filter=5#postform' ),
+			esc_url( 'https://wordpress.org/support/view/plugin-reviews/documentation?filter=5#postform' ),
 			__( 'Yes, let\'s go!', 'documentation' )
 		);
 		$output .= ' ';
