@@ -20,7 +20,7 @@ Documents are complemented by their dedicated document categories and document t
 
 It can be used to build a dedicated documentation site, a subsite for documentation in a multisite network or other creative deployments.
 
-See our [documentation portal](http://docs.itthinx.com) for an example where we use the system to maintain a considerable amount of documentation for our tools.
+See our [documentation portal](https://docs.itthinx.com) for an example where we use the system to maintain a considerable amount of documentation for our tools.
 
 Simple to use, yet powerful to maintain even thousands of documentation pages.
 
